--- a/presentation .html
+++ b/presentation .html
@@ -65,41 +65,42 @@
   .carousel {
     position: relative;
     width: 100%;
-    height: 400px;
+    max-width: 700px;
+    height: auto;
+    margin: auto;
     perspective: 1000px;
-    margin-bottom: 40px;
     overflow: hidden;
     border-radius: 12px;
+    background-color: #f5f5f5;
   }
 
   .carousel-inner {
+    position: relative;
+    width: 100%;
     height: 100%;
-    display: flex;
-    transition: transform 1s ease-in-out;
     transform-style: preserve-3d;
   }
 
   .carousel-slide {
-    min-width: 100%;
-    backface-visibility: hidden;
-    transform: rotateY(0deg);
-    transition: transform 1s ease-in-out;
     position: absolute;
-    top: 0;
-    left: 0;
+    width: 100%;
+    height: 100%;
     opacity: 0;
+    transition: opacity 0.8s ease-in-out;
   }
 
   .carousel-slide.active {
     opacity: 1;
-    transform: rotateY(0deg);
     z-index: 1;
   }
 
   .carousel-slide img {
     width: 100%;
-    height: 100%;
+    max-height: 350px;
+    height: auto;
     object-fit: contain;
+    display: block;
+    margin: auto;
     border-radius: 12px;
   }
 
@@ -114,6 +115,7 @@
     padding: 10px 16px;
     border-radius: 50%;
     cursor: pointer;
+    z-index: 2;
   }
 
   .prev-btn {
