Update presentation .html

--- a/presentation .html
+++ b/presentation .html
@@ -1,228 +1,263 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Biographie avec effet page tournante</title>
-<style>
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: #fff;
-    color: #222;
-    margin: 0;
-    padding: 20px;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Biographie - FONME</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #fff;
+      color: #222;
+      margin: 0;
+      padding: 20px;
+    }
 
-  .home-logo {
-    position: fixed;
-    top: 15px;
-    left: 15px;
-    display: flex;
-    align-items: center;
-    gap: 6px;
-    cursor: pointer;
-    font-weight: 700;
-    font-size: 1.2rem;
-    color: #16a085;
-    text-decoration: none;
-    animation: blink 1.5s infinite;
-    z-index: 9999;
-  }
-  @keyframes blink {
-    0%, 100% { opacity: 1; }
-    50% { opacity: 0.4; }
-  }
-  .home-logo svg {
-    width: 24px;
-    height: 24px;
-    fill: #16a085;
-  }
+    .home-logo {
+      position: fixed;
+      top: 15px;
+      left: 15px;
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      cursor: pointer;
+      font-weight: 700;
+      font-size: 1.2rem;
+      color: #16a085;
+      text-decoration: none;
+      animation: blink 1.5s infinite;
+      z-index: 1000;
+    }
 
-  .container {
-    max-width: 900px;
-    margin: auto;
-  }
+    .home-logo svg {
+      width: 24px;
+      height: 24px;
+      fill: #16a085;
+    }
 
-  h1, h2 {
-    text-align: center;
-  }
-  h1 {
-    color: #2c3e50;
-    margin-bottom: 5px;
-  }
-  h2 {
-    color: #16a085;
-    margin-top: 0;
-    margin-bottom: 25px;
-  }
-  p.bio-text {
-    font-size: 1.1rem;
-    color: #444;
-    text-align: justify;
-    margin-bottom: 40px;
-  }
+    @keyframes blink {
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0.4; }
+    }
 
-  .carousel {
-    position: relative;
-    width: 100%;
-    max-width: 700px;
-    height: auto;
-    margin: auto;
-    perspective: 1000px;
-    overflow: hidden;
-    border-radius: 12px;
-    background-color: #f5f5f5;
-  }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+    }
 
-  .carousel-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    transform-style: preserve-3d;
-  }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+      margin-bottom: 5px;
+    }
 
-  .carousel-slide {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    opacity: 0;
-    transition: opacity 0.8s ease-in-out;
-  }
+    h2 {
+      text-align: center;
+      color: #16a085;
+      margin-top: 0;
+      margin-bottom: 25px;
+    }
 
-  .carousel-slide.active {
-    opacity: 1;
-    z-index: 1;
-  }
+    p.bio-text {
+      font-size: 1.1rem;
+      color: #444;
+      margin-bottom: 40px;
+      text-align: justify;
+    }
 
-  .carousel-slide img {
-    width: 100%;
-    max-height: 350px;
-    height: auto;
-    object-fit: contain;
-    display: block;
-    margin: auto;
-    border-radius: 12px;
-  }
+    .carousel {
+      position: relative;
+      width: 100%;
+      max-width: 800px;
+      height: 450px;
+      margin: 0 auto 40px;
+      background: #eee;
+      overflow: hidden;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    }
 
-  .carousel-btn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background-color: rgba(22, 160, 133, 0.8);
-    border: none;
-    color: white;
-    font-size: 2rem;
-    padding: 10px 16px;
-    border-radius: 50%;
-    cursor: pointer;
-    z-index: 2;
-  }
+    .carousel-inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
 
-  .prev-btn {
-    left: 12px;
-  }
-  .next-btn {
-    right: 12px;
-  }
+    .carousel-slide {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: opacity 0.8s ease-in-out;
+    }
 
-  .carousel-dots {
-    text-align: center;
-    margin-top: 12px;
-  }
-  .dot {
-    display: inline-block;
-    width: 14px;
-    height: 14px;
-    margin: 0 6px;
-    background-color: #ccc;
-    border-radius: 50%;
-    cursor: pointer;
-  }
-  .dot.active {
-    background-color: #16a085;
-  }
-</style>
+    .carousel-slide.active {
+      opacity: 1;
+      z-index: 1;
+    }
+
+    .carousel-slide img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 12px;
+    }
+
+    .carousel-btn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(22, 160, 133, 0.8);
+      border: none;
+      color: white;
+      font-size: 2rem;
+      padding: 10px 16px;
+      border-radius: 50%;
+      cursor: pointer;
+      user-select: none;
+      transition: background-color 0.3s ease;
+      z-index: 2;
+    }
+
+    .carousel-btn:hover {
+      background-color: #13856e;
+    }
+
+    .prev-btn {
+      left: 12px;
+    }
+
+    .next-btn {
+      right: 12px;
+    }
+
+    .carousel-dots {
+      text-align: center;
+      margin-top: 12px;
+    }
+
+    .dot {
+      display: inline-block;
+      width: 14px;
+      height: 14px;
+      margin: 0 7px;
+      background-color: #ccc;
+      border-radius: 50%;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .dot.active {
+      background-color: #16a085;
+    }
+  </style>
 </head>
 <body>
 
-<a href="index.html" class="home-logo" aria-label="Retour à la page d'accueil FONME">
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M32 12L12 32h8v20h12V40h8v12h12V32h8z"/></svg>
-  FONME
-</a>
+  <!-- Logo maison -->
+  <a href="index.html" class="home-logo" aria-label="Retour à la page d'accueil FONME">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><path d="M32 12L12 32h8v20h12V40h8v12h12V32h8z" /></svg>
+    FONME
+  </a>
 
-<div class="container">
-  <h1>Nsimire Muzigirwa Elodie</h1>
-  <h2>Fondatrice</h2>
-  <p class="bio-text">
-    Passionnée par l'innovation et la technologie, Maitre Nsimire Muzigirwa Elodie a fondé notre Asbl en 2010 avec pour mission de révolutionner le secteur de la santé numérique.  
-    Forte de plus de 15 ans d'expérience dans le management et la recherche, elle incarne la vision et la détermination qui guident notre entreprise vers l'excellence.
-  </p>
+  <div class="container">
+    <h1>Nsimire Muzigirwa Elodie</h1>
+    <h2>Fondatrice & CEO</h2>
+    <p class="bio-text">
+      Passionnée par l'innovation et la technologie, Maître Nsimire Muzigirwa Elodie a fondé notre Asbl en 2010 avec pour mission de révolutionner le secteur de la santé numérique.  
+      Forte de plus de 15 ans d'expérience dans le management et la recherche, elle incarne la vision et la détermination qui guident notre entreprise vers l'excellence.
+    </p>
 
-  <div class="carousel" aria-label="Carrousel d’images">
-    <div class="carousel-inner" id="carousel-inner">
-      <div class="carousel-slide active">
-        <img src="IMG-20250512-WA0001(1).jpg" alt="Image 1" />
+    <div class="carousel" aria-label="Carrousel d’images de Maitre Nsimire Muzigirwa Elodie">
+      <div class="carousel-inner" id="carousel-inner">
+        <div class="carousel-slide active">
+          <img src="IMG-20250512-WA0001(1).jpg" alt="Image 1" />
+        </div>
+        <div class="carousel-slide">
+          <img src="473190987_3977638509168334_3429115658992751233_n.jpg" alt="Image 2" />
+        </div>
+        <div class="carousel-slide">
+          <img src="473674499_3977638312501687_4960707816372568313_n.jpg" alt="Image 3" />
+        </div>
       </div>
-      <div class="carousel-slide">
-        <img src="473190987_3977638509168334_3429115658992751233_n.jpg" alt="Image 2" />
-      </div>
-      <div class="carousel-slide">
-        <img src="473674499_3977638312501687_4960707816372568313_n.jpg" alt="Image 3" />
-      </div>
+      <button class="carousel-btn prev-btn" aria-label="Image précédente">&#10094;</button>
+      <button class="carousel-btn next-btn" aria-label="Image suivante">&#10095;</button>
     </div>
-    <button class="carousel-btn prev-btn">&#10094;</button>
-    <button class="carousel-btn next-btn">&#10095;</button>
+
+    <div class="carousel-dots" id="carousel-dots"></div>
   </div>
 
-  <div class="carousel-dots" id="carousel-dots"></div>
-</div>
+  <script>
+    const carouselInner = document.getElementById('carousel-inner');
+    const slides = Array.from(document.querySelectorAll('.carousel-slide'));
+    const prevBtn = document.querySelector('.prev-btn');
+    const nextBtn = document.querySelector('.next-btn');
+    const dotsContainer = document.getElementById('carousel-dots');
 
-<script>
-  let currentIndex = 0;
-  const slides = document.querySelectorAll('.carousel-slide');
-  const dotsContainer = document.getElementById('carousel-dots');
+    let currentIndex = 0;
+    let autoSlideInterval;
 
-  function showSlide(index) {
-    slides.forEach((slide, i) => {
-      slide.classList.remove('active');
-      if(i === index) slide.classList.add('active');
-    });
-
-    const dots = document.querySelectorAll('.dot');
-    dots.forEach(dot => dot.classList.remove('active'));
-    if(dots[index]) dots[index].classList.add('active');
-  }
-
-  function nextSlide() {
-    currentIndex = (currentIndex + 1) % slides.length;
-    showSlide(currentIndex);
-  }
-
-  function prevSlide() {
-    currentIndex = (currentIndex - 1 + slides.length) % slides.length;
-    showSlide(currentIndex);
-  }
-
-  function createDots() {
-    dotsContainer.innerHTML = '';
-    slides.forEach((_, i) => {
-      const dot = document.createElement('span');
-      dot.classList.add('dot');
-      if(i === 0) dot.classList.add('active');
-      dot.addEventListener('click', () => {
-        currentIndex = i;
-        showSlide(i);
+    function createDots() {
+      dotsContainer.innerHTML = '';
+      slides.forEach((_, i) => {
+        const dot = document.createElement('span');
+        dot.classList.add('dot');
+        if (i === currentIndex) dot.classList.add('active');
+        dot.addEventListener('click', () => {
+          currentIndex = i;
+          updateCarousel();
+          resetAutoSlide();
+        });
+        dotsContainer.appendChild(dot);
       });
-      dotsContainer.appendChild(dot);
+    }
+
+    function updateCarousel() {
+      slides.forEach((slide, index) => {
+        slide.classList.toggle('active', index === currentIndex);
+      });
+
+      const dots = dotsContainer.querySelectorAll('.dot');
+      dots.forEach(dot => dot.classList.remove('active'));
+      if (dots[currentIndex]) dots[currentIndex].classList.add('active');
+    }
+
+    prevBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+      updateCarousel();
+      resetAutoSlide();
     });
-  }
 
-  document.querySelector('.next-btn').addEventListener('click', nextSlide);
-  document.querySelector('.prev-btn').addEventListener('click', prevSlide);
+    nextBtn.addEventListener('click', () => {
+      currentIndex = (currentIndex + 1) % slides.length;
+      updateCarousel();
+      resetAutoSlide();
+    });
 
-  createDots();
-  setInterval(nextSlide, 5000); // slide auto toutes les 5s
-</script>
+    function startAutoSlide() {
+      autoSlideInterval = setInterval(() => {
+        currentIndex = (currentIndex + 1) % slides.length;
+        updateCarousel();
+      }, 5000);
+    }
 
+    function stopAutoSlide() {
+      clearInterval(autoSlideInterval);
+    }
+
+    function resetAutoSlide() {
+      stopAutoSlide();
+      startAutoSlide();
+    }
+
+    const carousel = document.querySelector('.carousel');
+    carousel.addEventListener('mouseenter', stopAutoSlide);
+    carousel.addEventListener('mouseleave', startAutoSlide);
+
+    // Initialisation
+    createDots();
+    updateCarousel();
+    startAutoSlide();
+  </script>
 </body>
 </html>
