Update presentation .html

--- a/presentation .html
+++ b/presentation .html
@@ -66,15 +66,15 @@
     }
 
     .carousel {
-      position: relative;
-      width: 100%;
-      max-width: 800px;
-      height: 450px;
-      margin: 0 auto 40px;
-      background: #eee;
-      overflow: hidden;
-      border-radius: 12px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    height: 350px; /* Hauteur réduite */
+    margin: 0 auto 40px;
+    background: #eee;
+    overflow: hidden;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     }
 
     .carousel-inner {
@@ -97,10 +97,10 @@
     }
 
     .carousel-slide img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 12px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Garde un beau cadrage sans déformation */
+    border-radius: 12px;
     }
 
     .carousel-btn {
