--- a/presentation .html
+++ b/presentation .html
@@ -58,12 +58,13 @@
       margin-bottom: 25px;
     }
 
-    p.bio-text {
-      font-size: 1.1rem;
-      color: #444;
-      margin-bottom: 40px;
-      text-align: justify;
-    }
+   p.bio-text {
+  font-family: 'EB Garamond', Garamond, "Times New Roman", serif;
+  font-size: 1.1rem;
+  color: #444;
+  margin-bottom: 40px;
+  text-align: justify;
+}
 
     .carousel {
     position: relative;
@@ -164,15 +165,15 @@
     <h1>Nsimire Muzigirwa Elodie</h1>
     <h2>Fondatrice & Avocate & Haut Cadre de l'AFDC-A/h2>
     <p class="bio-text">
-Née à la fin la guerre froide, dans la province du Sud-Kivu, au cœur du territoire de Kabare, Nsimire Muzigirwa Elodie incarne une génération de femmes visionnaires, animées par le courage, l’intelligence et un sens profond du devoir envers la société congolaise. Femme mariée, elle grandit dans un environnement où l’éducation est un pilier fondamental. C’est ainsi qu’elle entame brillamment ses études primaires et secondaires dans l’option pédagogie, parcours qui culmine par l’obtention de son **Diplôme d'État en 2010**.
+Née à la fin la guerre froide, dans la province du Sud-Kivu, au cœur du territoire de Kabare, Nsimire Muzigirwa Elodie incarne une génération de femmes visionnaires, animées par le courage, l’intelligence et un sens profond du devoir envers la société congolaise. Femme mariée, elle grandit dans un environnement où l’éducation est un pilier fondamental. C’est ainsi qu’elle entame brillamment ses études primaires et secondaires dans l’option pédagogie, parcours qui culmine par l’obtention de son Diplôme d'État en 2010**.
 
-Portée par un désir ardent de justice et de service public, elle poursuit ses études universitaires à la prestigieuse Université de Kinshasa, où elle obtient une Licence en Droit Économique et Social**. Cette formation la prépare à affronter avec rigueur et lucidité les enjeux sociaux, économiques et humains de son pays.
+Portée par un désir ardent de justice et de service public, elle poursuit ses études universitaires à la prestigieuse Université de Kinshasa, où elle obtient une Licence en Droit Économique et Social. Cette formation la prépare à affronter avec rigueur et lucidité les enjeux sociaux, économiques et humains de son pays.
 
-Femme de terrain, leader inspirante et militante infatigable, Nsimire Muzigirwa Elodie** fonde laFONME — Fondation Nsimire Muzigirwa Elodie. À travers cette œuvre caritative, elle se donne pour mission d’apporter une aide concrète et bienveillante aux **personnes du troisième âge**, de **soutenir la scolarisation des enfants en situation difficile**, et de **renforcer les capacités entrepreneuriales** des couches vulnérables, particulièrement les femmes. Sous sa direction, la FONME devient un véritable **sanctuaire d’espoir et de transformation sociale**.
+Femme de terrain, leader inspirante et militante infatigable, Nsimire Muzigirwa Elodie** fonde laFONME — Fondation Nsimire Muzigirwa Elodie. À travers cette œuvre caritative, elle se donne pour mission d’apporter une aide concrète et bienveillante aux **personnes du troisième âge, de soutenir la scolarisation des enfants en situation difficile, et de renforcer les capacités entrepreneuriales des couches vulnérables, particulièrement les femmes. Sous sa direction, la FONME devient un véritable sanctuaire d’espoir et de transformation sociale.
 
-Parallèlement à son engagement humanitaire, elle joue un rôle actif sur la scène politique nationale. Secrétaire Adjointe en charge des questions électorales** au sein du Parti AFDC-A, elle est également reconnue comme **haut cadre de ce même parti**, où elle œuvre sans relâche pour une démocratie participative, inclusive et centrée sur le citoyen.
+Parallèlement à son engagement humanitaire, elle joue un rôle actif sur la scène politique nationale. Secrétaire Adjointe en charge des questions électorales** au sein du Parti AFDC-A, elle est également reconnue comme haut cadre de ce même parti, où elle œuvre sans relâche pour une démocratie participative, inclusive et centrée sur le citoyen.
 
-En tant que Coordonnatrice de l’ADP (*Association de Défense des Droits des Patients*), elle s’illustre une fois de plus comme une défenseure intrépide des droits humains**, avec une attention particulière portée aux questions de santé, d’éthique et de dignité.
+En tant que Coordonnatrice de l’ADP (*Association de Défense des Droits des Patients*), elle s’illustre une fois de plus comme une défenseure intrépide des droits humains, avec une attention particulière portée aux questions de santé, d’éthique et de dignité.
 
 À travers ses multiples engagements, Nsimire Muzigirwa Elodie est bien plus qu’une juriste ou une militante : elle est une voix pour les sans-voix, une lumière pour les oubliés, un symbole d’espoir et de résilience pour la République Démocratique du Congo.
     </p>
@@ -186,7 +187,7 @@ En tant que Coordonnatrice de l’ADP (*Association de Défense des Droits des P
           <img src="473190987_3977638509168334_3429115658992751233_n.jpg" alt="Image 2" />
         </div>
         <div class="carousel-slide">
-          <img src="473674499_3977638312501687_4960707816372568313_n.jpg" alt="Image 3" />
+          <img src="bb.jpg" alt="Image 3" />
         </div>
       </div>
       <button class="carousel-btn prev-btn" aria-label="Image précédente">&#10094;</button>
