--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ nav ul li a {
     <h2>À la Une</h2>
     <div class="carousel-container">
       <div class="carousel-track">
-        <div class="carousel-item"><a href="#finalites"><div class="image-wrapper"><img src="IMG-20250602-WA0054.jpg"></div></a><p>Assistance aux finalités</p></div>
+        <div class="carousel-item"><a href="#finalites"><div class="image-wrapper"><img src="actuadp.jpg"></div></a><p>ADP Kolwezi</p></div>
         <div class="carousel-item"><a href="#katulo"><div class="image-wrapper"><img src="IMG-20250522-WA0029.jpg"></div></a><p>Journée de Katulo Toussain</p></div>
         <div class="carousel-item"><a href="#katana"><div class="image-wrapper"><img src="IMG-20250605-WA0068.jpg"></div></a><p>Climat de guerre à Katana</p></div>
         <div class="carousel-item"><a href="#merite"><div class="image-wrapper"><img src="Mérite NME_n.jpg"></div></a><p>Mérite de la fondatrice</p></div>
@@ -310,14 +310,21 @@ nav ul li a {
   </section>
 
   <!-- Sections détaillées -->
- <section id="finalites" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
-  <img src="IMG-20250602-WA0054.jpg" alt="Assistance aux finalités" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+ <section id="ADP Kolwezi" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
+  <img src="IMG-20250602-WA0054.jpg" alt="ADP Kolwezi" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
   <div style="margin-top: 10px; font-size: 14px; color: #666;">
-    🕒 Publié le <strong>18 Juin 2025 à 09h30</strong> par <strong>Samuel Naninkasa</strong>
+    🕒 Publié le <strong>12 Juin 2025 à 20h34</strong> par <strong>Le Coordonnateur Pacifique</strong>
   </div>
-  <h3 style="margin-top: 10px; color: #001F3F;">Assistance aux finalités</h3>
+  <h3 style="margin-top: 10px; color: #001F3F;">ADP Kolwezi</h3>
   <p style="text-align: justify; font-size: 16px; color: #333;">
-    Distribution de vivres et fournitures scolaires aux familles vulnérables. Cette action renforce l’engagement de la fondation dans l’accompagnement des communautés.</p>
+    Me Élodie Nsimire Muzigirwa, présidente de l'Association de Défense des Droits des Patients ADP, parmi les invités du Ministère de la Santé à la 12ème conférence des Gouverneurs.
+Tenue dans la ville de Kolwezi, province de Lualaba, la 12ème conférence des Gouverneurs est axé, essentiellement, sur la santé sous le thème " _la santé comme facteur de cohésion sociale et de développement durable des provinces"_
+Parmi les acteurs invités par le ministère national de la santé à ces assises de haut niveau se trouve *Me Élodie Nsimire Muzigirwa,* Presidente de l'Association de Défense des Droits des Patients ADP, une dame qui se demarque par ses plaidoyers pour un accès aux soins de santé pour tous et le respect des droits des malades, et dont les efforts sont bien reconnus par le ministère sectoriel. 
+La Constitution de notre pays consacre le droit à la santé (art 47 ). La RDC a adhéré à  l’ODD 3 . L'ADP, dans sa lutte,  s'inscrit dans la vision du Président de la République, S.E Félix-Antoine TSHISEKEDI TSHILOMBO, qui veut que tout congolais accède aux soins de santé de qualité sans barrière financière.
+La couverture santé universelle repose fondamentalement sur une approche communautaire. Elle ne saurait être effective sans l’implication des citoyens à travers leurs organisations représentatives. Le renforcement des soins de santé primaire, stratégie de la  CSU, est une compétence provinciale, mais sa réussite dépend aussi de la participation active des communautés locales.
+C'est à ce titre qu'elle se retrouve à Kolwezi, à côté des autres experts, pour apporter sa modeste contribution aux échanges qui guideront les décisions politiques. 
+En marge de cette conférence, on peut parler aussi de cette retrouvaille entre cadres et mandataires de l'AFDC-A, chère à l'honorable Professeur Modeste Bahati Lukwebo, entre autre; le Professeur Jean-Jacques Purusi, Gouverneur de la Province du Sud-Kivu, l'honorable président de l'Assemblée  provinciale de Tanganyika Dr CYRILE Awel, honorable Samuel, ancien PF de l'AFDC en Ituri et actuel président de l'Assemblée Provinciale d'Ituri, Me Élodie Nsimire Muzigirwa, secrétaire nationale en charge du processus électoral, des conseillers communaux venus du Nord-kivu, et nombreux d'autres. 
+Signalons que depuis plusieurs années, l'ADP mène des plaidoyers internes et externes pour l'amélioration du système de santé en RDC.</p>
    <a href="#top">↑ Retour en haut</a>
   </div>
 
