--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ nav ul li a {
 
   <!-- Sections détaillées -->
 <section id="ADP Kolwezi" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
-  <img src="IMG-20250602-WA0054.jpg" alt="ADP Kolwezi" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <img src="actuadp.jpg" alt="ADP Kolwezi" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
   
   <div style="margin-top: 10px; font-size: 14px; color: #666;">
     🕒 Publié le <strong>12 Juin 2025 à 20h34</strong> par <strong>Le Coordonnateur Pacifique</strong>
