--- a/index.html
+++ b/index.html
@@ -309,29 +309,40 @@ nav ul li a {
     </div>
   </section>
 
-  <!-- Sections détaillées -->
-<section id="ADP Kolwezi" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
-  <img src="actuadp.jpg" alt="ADP Kolwezi" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <section id="ADP Kolwezi" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
+  <img src="IMG-20250602-WA0054.jpg" alt="ADP Kolwezi" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
   
   <div style="margin-top: 10px; font-size: 14px; color: #666;">
     🕒 Publié le <strong>12 Juin 2025 à 20h34</strong> par <strong>Le Coordonnateur Pacifique</strong>
-    
-    <!-- Icônes réseaux sociaux -->
     <span style="float: right;">
-      <a href="https://web.facebook.com/share/p/1Beb4b4Lbg/" target="_blank" style="margin-right: 10px;">
+      <a href="https://www.facebook.com/lien-de-ta-publication" target="_blank" style="margin-right: 10px;">
         <img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook" style="vertical-align: middle;" />
       </a>
-      <a href="https://whatsapp.com/channel/0029Vb66qt15a23vjPnLiP1b/109" target="_blank">
+      <a href="https://wa.me/243000000000?text=Regarde%20cette%20publication%20ADP%20Kolwezi%20!" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/24/733/733585.png" alt="WhatsApp" style="vertical-align: middle;" />
       </a>
     </span>
   </div>
 
   <h3 style="margin-top: 10px; color: #001F3F;">ADP Kolwezi</h3>
+  
   <p style="text-align: justify; font-size: 16px; color: #333;">
-    Me Élodie Nsimire Muzigirwa, présidente de l'Association de Défense des Droits des Patients ADP, parmi les invités...
-    <!-- texte inchangé -->
+    Me Élodie Nsimire Muzigirwa, présidente de l'Association de Défense des Droits des Patients ADP, parmi les invités du Ministère de la Santé à la 12ème conférence des Gouverneurs.
+    Tenue dans la ville de Kolwezi, province de Lualaba, la 12ème conférence des Gouverneurs est axée, essentiellement, sur la santé sous le thème : <em>« la santé comme facteur de cohésion sociale et de développement durable des provinces »</em>.<br><br>
+    Parmi les acteurs invités par le ministère national de la santé à ces assises de haut niveau se trouve <strong>Me Élodie Nsimire Muzigirwa</strong>, Présidente de l'Association de Défense des Droits des Patients ADP, une dame qui se démarque par ses plaidoyers pour un accès aux soins de santé pour tous et le respect des droits des malades, et dont les efforts sont bien reconnus par le ministère sectoriel.
+    <br><br>
+    La Constitution de notre pays consacre le droit à la santé (art. 47). La RDC a adhéré à l’ODD 3. L'ADP, dans sa lutte, s'inscrit dans la vision du Président de la République, S.E. Félix-Antoine TSHISEKEDI TSHILOMBO, qui veut que tout Congolais accède aux soins de santé de qualité sans barrière financière.
+    <br><br>
+    La couverture santé universelle repose fondamentalement sur une approche communautaire. Elle ne saurait être effective sans l’implication des citoyens à travers leurs organisations représentatives. Le renforcement des soins de santé primaires, stratégie de la CSU, est une compétence provinciale, mais sa réussite dépend aussi de la participation active des communautés locales.
+    <br><br>
+    C'est à ce titre qu'elle se retrouve à Kolwezi, à côté des autres experts, pour apporter sa modeste contribution aux échanges qui guideront les décisions politiques.
+    <br><br>
+    En marge de cette conférence, on peut parler aussi de cette retrouvaille entre cadres et mandataires de l'AFDC-A, chère à l'honorable Professeur Modeste Bahati Lukwebo, entre autres : le Professeur Jean-Jacques Purusi, Gouverneur de la Province du Sud-Kivu ; l'honorable Président de l'Assemblée provinciale de Tanganyika, Dr CYRILE Awel ; l'honorable Samuel, ancien PF de l'AFDC en Ituri et actuel Président de l'Assemblée Provinciale d'Ituri ; Me Élodie Nsimire Muzigirwa, Secrétaire nationale en charge du processus électoral ; des conseillers communaux venus du Nord-Kivu ; et de nombreux autres.
+    <br><br>
+    Signalons que depuis plusieurs années, l'ADP mène des plaidoyers internes et externes pour l'amélioration du système de santé en RDC.
   </p>
+  <a href="#top" style="display: block; margin-top: 20px;">↑ Retour en haut</a>
+</section>
 
   <a href="#top">↑ Retour en haut</a>
 </section>
