--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ nav ul li a {
         <div class="carousel-item"><a href="#ADP Kolwezi"><div class="image-wrapper"><img src="actuadp.jpg"></div></a><p>ADP Kolwezi</p></div>
         <div class="carousel-item"><a href="#katulo"><div class="image-wrapper"><img src="IMG-20250522-WA0029.jpg"></div></a><p>Journée de Katulo Toussain</p></div>
         <div class="carousel-item"><a href="#katana"><div class="image-wrapper"><img src="IMG-20250605-WA0068.jpg"></div></a><p>Climat de guerre à Katana</p></div>
-        <div class="carousel-item"><a href="#merite"><div class="image-wrapper"><img src="Mérite NME_n.jpg"></div></a><p>Mérite de la fondatrice</p></div>
+        <div class="carousel-item"><a href="#merita"><div class="image-wrapper"><img src="Mérite NME_n.jpg"></div></a><p>Mérite de la fondatrice</p></div>
         <div class="carousel-item"><a href="#humanitaire"><div class="image-wrapper"><img src="IMG-20250505-WA0045.jpg"></div></a><p>Oeuvres humanitaires</p></div>
         <div class="carousel-item"><a href="#fonme"><div class="image-wrapper"><img src="IMG-20241130-WA0018.jpg"></div></a><p>Mission Fonme</p></div>
       </div>
@@ -310,7 +310,7 @@ nav ul li a {
   </section>
 
   <section id="ADP Kolwezi" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
-  <img src="IMG-20250602-WA0054.jpg" alt="ADP Kolwezi" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  <img src="actuadp.jpg" alt="ADP Kolwezi" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
   
   <div style="margin-top: 10px; font-size: 14px; color: #666;">
     🕒 Publié le <strong>12 Juin 2025 à 20h34</strong> par <strong>Le Coordonnateur Pacifique</strong>
@@ -381,6 +381,36 @@ nav ul li a {
     Un prix d’honneur remis à Elodie Muzigirwa pour son engagement inlassable dans les causes sociales, en reconnaissance de son dévouement.</p>
    <a href="#top">↑ Retour en haut</a>
   </div>
+     <section id="merite" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
+  <img src="Mérite NME_n.jpg" alt="merite" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
+  
+  <div style="margin-top: 10px; font-size: 14px; color: #666;">
+    🕒 Publié le <strong>5 Mai 2025 à 11h00</strong> par <strong>Le Coordonnateur Pacifique</strong>
+    <span style="float: right;">
+      <a href="https://web.facebook.com/share/v/1NVZD66ykT/" target="_blank" style="margin-right: 10px;">
+        <img src="https://cdn-icons-png.flaticon.com/24/733/733547.png" alt="Facebook" style="vertical-align: middle;" />
+      </a>
+      <a href="https://wa.me/243000000000?text=Regarde%20cette%20publication%20ADP%20Kolwezi%20!" target="_blank">
+        <img src="https://cdn-icons-png.flaticon.com/24/733/733585.png" alt="WhatsApp" style="vertical-align: middle;" />
+      </a>
+    </span>
+  </div>
+
+  <h3 style="margin-top: 10px; color: #001F3F;">ADP Kolwezi</h3>
+  
+  <p style="text-align: justify; font-size: 16px; color: #333;">
+    C’est par un titre d’honneur que  <strong>la communauté Bashi-Bahavu CINYABUGUMA</strong> a salué l’engagement indéfectible de <strong>Maître Élodie NSIMIRE MUZIGIRWA</strong>, femme de cœur et d’action, dont le dévouement illumine les vies, surtout des plus vulnérables.
+    <br><br>
+   Porte-étendard de la solidarité, son combat pour le bien-être social, communautaire et humanitaire a tracé des sillons d’espoir au sein des populations oubliées. Par son altruisme, elle incarne les valeurs ancestrales du  <strong>Bashi-Bahavu CINYABUGUMA</strong> : entraide, dignité et résilience. 
+    <br><br>
+    En reconnaissance de sa contribution exceptionnelle, surtout dans son KABARE natal, la communauté lui a décerné un <strong>Brevet de Mérite et de Reconnaissance</strong>, symbole de gratitude pour son œuvre transformatrice.
+   <br><br>
+    Que son exemple continue de guider les générations futures, car <em>« une main qui donne ne s’appauvrit jamais »</em> (<strong>Proverbe Bushi</strong>).
+    <a href="#top" style="display: block; margin-top: 20px;">↑ Retour en haut</a>
+</section>
+
+  <a href="#top">↑ Retour en haut</a>
+</section>
 
   <section id="humanitaire" style="max-width: 960px; margin: 40px auto; padding: 20px; border-top: 2px solid #001F3F;">
   <img src="IMG-20250505-WA0045.jpg" alt="Oeuvres humanitaires" style="width: 100%; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);" />
