--- a/presentation .html
+++ b/presentation .html
@@ -58,10 +58,11 @@
       margin-bottom: 25px;
     }
 
-  p.bio-text {
+p.bio-text {
   font-family: "Times New Roman", Times, serif;
   font-size: 1rem;
   color: #333;
+  font-weight: normal; /* ← ceci remet le poids par défaut (non gras) */
   margin-bottom: 30px;
   text-align: justify;
 }
